# generative-art

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
art-lib/: Cargo.toml
art-lib/src/: forces_config.rs  lib.rs  nightfall_config.rs  piet_config.rs
grid/: Cargo.toml
grid/src/: main.rs
libs/palette/: Cargo.toml
libs/palette/src/: color.rs  lib.rs  palette.rs  palettes.rs  simple_palette.rs  weighted_palette.rs
libs/shapes/src/: blob.rs  circle.rs  lib.rs  path.rs  point.rs  pointmap.rs  rectangle.rs  shape.rs
libs/svg/: Cargo.toml
libs/svg/src/: group.rs  lib.rs  svg.rs
libs/transforms/: Cargo.toml
libs/transforms/src/: gen_weighted.rs  lib.rs  map.rs
palette/src/: lib.rs  palette.rs
shapes/: Cargo.toml
shapes/src/: blob.rs  circle.rs  lib.rs  path.rs  point.rs  pointmap.rs  rectangle.rs
src/: blob.rs  circle.rs  forces_config.rs  grid_config.rs  group.rs  helpers.rs  lib.rs  line.rs  main.rs  nightfall_config.rs  palette.rs  path.rs  piet_config.rs  point.rs  pointmap.rs  rectangle.rs  shape.rs  svg.rs
src/configs/: forces_config.rs  grid_config.rs  mod.rs  piet_config.rs
src/paintings/: mod.rs
src/paintings/avoidance/: algo.rs  config.rs  ui.rs
src/paintings/forces/: algo.rs  config.rs  ui.rs
src/paintings/grid/: algo.rs  config.rs  ui.rs
src/paintings/nightfall/: algo.rs  config.rs  mod.rs
src/paintings/piet/: algo.rs  config.rs  mod.rs  ui.rs
src/paintings/wildlands/: algo.rs  config.rs  mod.rs  ui.rs
src/palette/: color.rs  mod.rs  palettes.rs  regional_palette.rs  simple_palette.rs  weighted_palette.rs
src/shape/: circle.rs
src/shapes/: blob.rs  circle.rs  mod.rs  path.rs  point.rs  pointmap.rs  rectangle.rs  shape.rs
src/svg/: document.rs  group.rs  mod.rs  svg.rs
src/transforms/: gen_weighted.rs  map.rs  mod.rs
svg/: Cargo.toml
svg/src/: group.rs  lib.rs  svg.rs
transforms/src/: gen_weighted.rs  lib.rs  map.rs
