[package]
name = "generative-art"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
chrono = "0.4.19"
noise = "0.7.0"
num-traits = "0.2.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
wasm-bindgen = "0.2.63"

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "grid"
path = "src/bin/grid.rs"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
