[package]
name = "generative-art"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
threadpool = "1.8.1"
clap = { version = "4.0.18", features = ["derive"] }
eframe = "0.20.1"
egui_extras = { version = "0.20.0", features = ["svg"] }
chrono = "0.4.23"
num-traits = "0.2.15"

[[bin]]
name = "grid"
path = "src/bin/grid.rs"
