[package]
name = "art-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
noise = "0.7.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
threadpool = "1.8.1"
clap = { version = "4.0.18", features = ["derive"] }
svg = { path = "../svg" }
shapes = { path = "../shapes" }
transforms = { path = "../transforms" }
palette = { path = "../palette" }
